<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anax</string>
    <string name="account_TOU"> Term of Use: </string>
    <string name="account_TOU_text"> YOU SHOULD CAREFULLY READ THE FOLLOWING ΑΝΑΧ TERMS OF USE AGREEMENT.\n Welcome to Anax Entertainment, Anax&#169;. The Game includes two components:\n a. mobile software,\n b. website - service, \n c. store\'s software  </string>
    <string name="account_TOU_bacceptTOU"> Accept </string>
    <string name="account_register_required_fields"> Required Fields* </string>
    <string name="account_forget_email"> Enter your Email Address: </string>
    <string name="account_forget_password"> Forget Password? </string>
    <string name="account_forget_bsendpass"> Retrieve Password </string>
    <string name="account_register_email"> Email: </string>
    <string name="account_register_email_edt"> Type your Email </string>
    <string name="account_register_email_receive"> Would you like to receive email updates </string>
    <string name="account_register_termOfUse"> Term Of Use </string>
    <string name="account_register_phone"> Phone: </string>
    <string name="account_register_phone_edt"> Type your phone number </string>
    <string name="account_register_username"> Username: </string>
    <string name="account_register_username_edt"> Type your name </string>
    <string name="account_register_password"> Password: </string>
    <string name="account_register_password_edt"> Type your password </string>
    <string name="account_register_bsubmit"> Submit </string>
    <string name="account_register_bcancel"> Cancel </string>
    <string name="game_init_title"> AnaX </string>
    <string name="game_init_username"> Username: </string>
    <string name="game_init_password"> Password: </string>
    <string name="game_init_bLogIn"> LogIn </string>
    <string name="game_init_bforgetpassword"> Forget Password? </string>
    <string name="game_init_welcome">Welcome to AnaX. This is my Senior design project. aims to help you travel all around Cyprus and to have fun.</string>
    <string name="action_settings">Settings </string>
    <string name="app_gamewelcomesettings"> Settings </string>
    <string name="app_gamewelcomecredits"> Credits </string>
    <string name="app_gamewelcomehelp"> Help </string>
    <string name="app_settings_language_en"> Language: English </string>
    <string name="app_settings_language_gr"> Γλώσσα: Ελληνικά </string>
    <string name="app_settings_sounds_on"> Sound: ON </string>
    <string name="app_settings_sounds_off"> Sound: OFF </string>
    <string name="app_settings_music_on"> Music: ON </string>
    <string name="app_settings_music_off"> Music: OFF </string>
    <string name="credits"> Credits </string>
    <string name="credits_title"> Special Thanks </string>
    <string name="credits_teacher"> I would first like to acknowledge my adviser, Dr. Chatzikostis, for agreeing to serve as my adviser and gave me this opportunity of bringing to life my own idea.</string>
    <string name="credits_brother"> This dissertation would have not been possible without the help and support from my brother Soteris and his fiancé Antigoni.</string>
    <string name="credits_friendsB">A very special thank is due to my friend and colleague Antonia for her encouragement.</string>
    <string name="credits_friendsA"> Furthermore I\'d like to thank my special friend Stavros for his assistance, patience and the long conversations about the project\'s future.</string>
    <string name="credits_family"> Finishing I would like expressing my gratitude to my family and friends who had showed the patience and were supportive during my moments of frustration.</string>
    <string name="credits_me"> A great thank you to everyone who believed in me!</string>
    <string name="help_email_name"> Name: </string>
    <string name="help_email_subject"> Subject: </string>
    <string name="help_email_message"> Message: </string>
    <string name="help_email_bSendEmail"> Send Email </string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_initialize_log_in">GameInitializeLogInActivity</string>
    <string name="title_activity_account_register">AccountRegisterActivity</string>
    <string name="title_activity_account_forget_password">AccountForgetPasswordActivity</string>
    <string name="title_activity_account_tou">AccountTOUActivity</string>
    <string name="title_activity_quest_in_progress">QuestInProgressActivity</string>
    <string name="title_activity_quest_in_progress_insert_code">QuestInProgressInsertCodeActivity</string>
    <string name="title_activity_account_reward">AccountRewardActivity</string>
    <string name="title_activity_account_profile">AccountProfileActivity</string>

</resources>