<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9dfca"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tVrf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/account_register_required_fields"
                android:textAlignment="gravity"
                android:textColor="#00f"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tVname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_username"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/tv_rc4"
                android:ems="20"
                android:hint="@string/account_register_username_edt"
                android:maxLength="20" >
            </EditText>

            <TextView
                android:id="@+id/tVemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/tv_rc4"
                android:ems="20"
                android:hint="@string/account_register_email_edt"
                android:maxLength="25" />

            <TextView
                android:id="@+id/tVphone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_phone"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/tv_rc4"
                android:digits="0123456789+"
                android:ems="8"
                android:hint="@string/account_register_phone_edt"
                android:inputType="phone"
                android:maxLength="8" />

            <TextView
                android:id="@+id/tVpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_password"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/tv_rc4"
                android:ems="25"
                android:hint="@string/account_register_password_edt"
                android:inputType="textPassword"
                android:maxLength="25" />

            <CheckBox
                android:id="@+id/cbRecEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_register_email_receive"
                android:textColor="#000000" >
            </CheckBox>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp"
                android:weightSum="100" >

                <Button
                    android:id="@+id/bsubmit"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/edt_1"
                    android:gravity="center"
                    android:text="@string/account_register_bsubmit"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bcancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/edt_1"
                    android:gravity="center"
                    android:text="@string/account_register_bcancel"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/reward_icon" />

</LinearLayout>