<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9dfca"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="7dp"
        android:background="@drawable/tv1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvCredits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/tv_rc2"
                android:text="@string/credits_title"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_teacher"
                android:textColor="#000000"
                android:textSize="13sp" />

       
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_friendsA"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_brother"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_friendsB"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_family"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@drawable/tv_rc1"
                android:text="@string/credits_me"
                android:textColor="#000000"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>