<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9dfca"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/cyprus3"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/game_init_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_rc4"
                android:gravity="center"
                android:text="@string/game_init_welcome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/tv_rc4"
                android:ems="10"
                android:hint="@string/game_init_username"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="13sp" >
            </EditText>

            <EditText
                android:id="@+id/etUserPassword"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/tv_rc4"
                android:ems="10"
                android:hint="@string/game_init_password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="13sp" >
            </EditText>

            <ImageButton
                android:id="@+id/imgbRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/tv_rc1"
                android:src="@drawable/register1" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="100" >

                <Button
                    android:id="@+id/blogin"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/btn_2"
                    android:text="@string/game_init_bLogIn"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/bForgotPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:layout_weight="50"
                    android:background="@drawable/btn_2"
                    android:text="@string/game_init_bforgetpassword"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>