<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e9dfca"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="7dp"
        android:background="@drawable/tv1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/tv_rc2"
            android:gravity="center"
            android:text="Contact Us: "
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/tv_rc1"
            android:text="@string/help_email_name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmailName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <requestFocus />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/tv_rc1"
            android:text="@string/help_email_subject"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmailSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/tv_rc1"
            android:text="@string/help_email_message"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEmailComments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bsendEmail"
            android:padding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/btn_2"
            android:text="@string/help_email_bSendEmail"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>